Dodanie rysowania pól i klocków

--- a/Tetris/Tetris.csproj
+++ b/Tetris/Tetris.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Klocek.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Autor.resx">
+      <DependentUpon>Autor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
